[package]
edition = "2021"
name = "tickoattwo-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
ws_stream_wasm = "0.7.3"
web-sys = { version = "0.3.60", features = ["console"] }
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"
futures = "0.3.25"
tickoattwo = { path = "../protocol" }
getrandom = { version = "0.2.8", features = ["js"] }
